--- a/src/arrow.html
+++ b/src/arrow.html
@@ -372,7 +372,7 @@
 
                 line.element.setAttribute("d", path.join("\n"));
 
-                const create_head = (type, bezier, where, is_start, mask) => {
+                const create_head = (heads, bezier, where, is_start, mask) => {
                     const head = new DOM.SVGElement("path", {
                         fill: mask ? "black" : "none",
                         stroke: !mask ? "black" : "none",
@@ -381,15 +381,45 @@
                     const mul = is_start ? 1 : -1;
                     const flag = is_start ? 0 : 1;
                     const head_path = new Path();
-                    if ((type === "arrowhead" || type === "epi" || type === "mono" || type === "maps to") && !mask) {
-                        const HEAD_SPACING = HEAD_WIDTH / 2 + 2;
-                        const heads = 30;
-                        const start_arclen = bezier.arc_length(where.t) + (type === "mono" ? mul * HEAD_WIDTH : 0);
-                        const ts = [t_after_length(start_arclen)];
-                        for (let i = 0; i + 1 < heads; ++i) {
-                            ts.push(t_after_length(start_arclen + mul * HEAD_SPACING * i));
+
+                    const is_harpoon = heads.length === 1 && heads[0].startsWith("harpoon");
+
+                    if (!is_harpoon) {
+                        const HEAD_SPACING = 2;
+                        let arclen = bezier.arc_length(where.t);
+                        const ts = [];
+                        let prev_margin = 0;
+                        for (let i = 0; i < heads.length; ++i) {
+
+                            let margin_left, margin_right, margin_start;
+                            switch (heads[i]) {
+                                case "epi":
+                                    [margin_left, margin_right, margin_start]
+                                        = [HEAD_WIDTH, 0, 0]; break;
+                                case "mono":
+                                    [margin_left, margin_right, margin_start]
+                                        = [0, HEAD_WIDTH, HEAD_WIDTH]; break;
+                                case "maps to":
+                                    [margin_left, margin_right, margin_start]
+                                        = [HEAD_WIDTH / 2, HEAD_WIDTH / 2, 0]; break;
+                            }
+
+                            if (i === 0) {
+                                arclen += margin_start * mul;
+                            } else {
+                                // When we have multiple heads of the same type in a row, we can
+                                // collapse them together, because each will fill the whitespace
+                                // area of the previous.
+                                const collapse = heads[i] === heads[i - 1] ? 2 : 1;
+                                arclen += ((prev_margin + margin_right) / collapse + HEAD_SPACING) * mul;
+                            }
+
+                            prev_margin = margin_left;
+
+                            ts.push(t_after_length(arclen));
                         }
-                        for (let i = heads - 1; i >= 0; --i) {
+                        for (let i = heads.length - 1; i >= 0; --i) {
+                            const type = heads[i];
                             for (const [iflag, imul] of [[flag, -1], [1 - flag, 1]]) {
                                 const off = bezier.point(ts[i]);
                                 head_path.move_to(
@@ -397,7 +427,7 @@
                                     off.y + height / 2,
                                 );
                                 const angle = bezier.angle(ts[i]) + (type === "mono" ? Math.PI : 0);
-                                if (type === "arrowhead" || type === "epi" || type === "mono") {
+                                if (type === "epi" || type === "mono") {
                                     const [dx, dy] = [mul * HEAD_WIDTH, imul * HEAD_HEIGHT / 2];
                                     head_path.arc_by(
                                         mul * HEAD_WIDTH,
@@ -432,7 +462,7 @@
                             }
                         }
                         head.element.setAttribute("d", head_path.toString());
-                    } else if (type.startsWith("harpoon")) {
+                    } else if (is_harpoon) {
                         // TODO: this should be shifted up
                         const h = line_width + SPACING;
                         const flip = type.endsWith("top") ? 1 : -1;
@@ -465,30 +495,33 @@
                         }
                         head.element.setAttribute("d", head_path.toString());
                         head.element.setAttribute("transform", `rotate(${where.angle * 180 / Math.PI} ${where.x} ${where.y + height / 2})`);
-                    } else if (type === "none") {
-                        // Don't do anything.
-                        // TODO: should probably draw padding, though
                     }
                     return head;
                 }
 
-                let draw_head = (type, bezier, where, is_start) => {
-                    const head = create_head(type, bezier, where, is_start, false);
+                let draw_head = (types, bezier, where, is_start) => {
+                    const head = create_head(types, bezier, where, is_start, false);
                     if (head !== null) {
                         this.svg.add(head);
                     }
-                    const mask = create_head(type, bezier, where, is_start, true);
-                    if (mask !== null) {
-                        clip.add(mask);
-                    }
-                    // const head2 = create_head(type, bezier, where, is_start, false);
+                    // const mask = create_head(types, bezier, where, is_start, true);
+                    // if (mask !== null) {
+                    //     clip.add(mask);
+                    // }
+                    // const head2 = create_head(types, bezier, where, is_start, false);
                     // if (head2 !== null) {
                     //     head2.style.stroke = "white";
                     //     clip.appendChild(head2);
                     // }
                 };
-                draw_head("arrowhead", bezier, start, true);
-                draw_head("arrowhead", bezier, end, false);
+                // const heads = Array(10).fill("maps to");
+                const heads = Array(10).fill("epi");
+                // const heads = Array(10).fill("mono");
+                // const heads = ["mono", "epi"];
+                // const heads = ["epi", "mono"];
+                // const heads = ["mono", "maps to", "epi", "mono", "maps to", "epi"];
+                draw_head(heads, bezier, start, true);
+                draw_head(heads, bezier, end, false);
             }
         }
 
