--- a/src/arrow.html
+++ b/src/arrow.html
@@ -30,6 +30,7 @@
         // TODO: cut head/tail as well as edge
         // TODO: make sure pixel perfect + 0.5px if necessary.
         // As many of the styles should be combinable (and parametric) as possible.
+        // Handle extreme edge cases gracefully.
 
         // Remove rounded rect from svg drawing.
         // Find intersection of Bezier with rounded rect.
